Switch to maven jreleaser