@@ -1,7 +1,12 @@
 # Hash Utils
 
-This project contains utilities to hash files with SHA256/SHA512.
+This project contains utilities to hash files with SHA256/SHA512/MD5.
 
+The implemenation uses memory mapping of files in order to achieve a high level of performance.
+
+Please note that the current implementation in this library requires the use of __Java 21__ + __preview features__ enabled.
+
+You can enable preview features via `--enable-preview` vm / compiler argument.
 
 ## Maven
 
@@ -9,7 +14,7 @@ This project contains utilities to hash files with SHA256/SHA512.
 <dependency>
   <groupId>io.metaloom.utils</groupId>
   <artifactId>hash-utils</artifactId>
-  <version>0.2.0</version>
+  <version>0.3.0-SNAPSHOT</version>
 </dependency>
 ```
 
@@ -73,7 +78,7 @@ Hasher hasher = new FileChannelHasher();
 | Name                   | State             |            Description  |
 |------------------------|-------------------|-------------------------|
 | MemorySegmentHasher    | (default)         | Uses the JEP 424 foreign memory allocation API to memory map files.              
-| FileChannelHasher      | -                 | Uses a filechannel to map regions of the file to memory. This implementation only supports files which are smaller Integer.MAX_VALUE  |
+| FileChannelHasher      | -                 | Uses a filechannel to map regions of the file to memory. This implementation only supports files which are smaller Integer.MAX_VALUE bytes.  |
 | MmapHasher             | (legacy/removed)  | Uses JNI to make use of Mmap to map file regions to direct memory.                                                                    |
 
 
